package com.maxqiu.demo.P07_Decorator;

/**
 * 脱因咖啡
 * 
 * @author Max_Qiu
 */
public class Decaf extends Goods {

    public Decaf() {
        des = "脱因咖啡";
        price = 5.0;
    }

}
