package com.maxqiu.demo.P07_Decorator;

/**
 * 意大利咖啡
 * 
 * @author Max_Qiu
 */
public class Espresso extends Goods {

    public Espresso() {
        des = "意大利咖啡";
        price = 4.0;
    }

}
