@startuml
abstract class Goods {
    # des : String
    # price : Double
    + getDes()
    + getPrice()
}
class Decaf {
    + Decaf()
}
class Espresso {
    + Espresso()
}
class Coffee {
    # goods : Goods
    + Coffee(goods : Goods)
    + getDes()
    + getPrice()
}
class Milk {
    + Milk(coffee : Coffee)
}
class Caramel {
    + Caramel(coffee : Coffee)
}
Decaf -up-|> Goods
Espresso -up-|> Goods
Coffee -up-|> Goods
Coffee *-up- Goods
Milk -up-|> Coffee
Caramel -up-|> Coffee
@enduml